more margin fixes + alignment issues
caused by all the different profile section constructions (hard to select with css, could add more classes in the future?)

--- a/datausa/assets/scss/elements/_profile_m.scss
+++ b/datausa/assets/scss/elements/_profile_m.scss
@@ -150,11 +150,16 @@ body.profile, body.story {
       @include box();
 
       .category {
-        margin: 30px 0;
+        margin: 0 auto;
+        padding: 30px 25px 25px;
 
         &::before, &::after {
           content: none;
         }
+      }
+      
+      .topic.flex {
+        margin: 0 0 50px;
       }
 
       .topic {
@@ -165,6 +170,11 @@ body.profile, body.story {
 
         &.flex {
           @include flex-size(1 0 auto);
+          
+          /* selector for health data */
+          .content aside > .topic-stats:first-child .stat:only-child {
+            margin-top: 0;
+          }
         }
 
         .content {
@@ -179,10 +189,10 @@ body.profile, body.story {
               margin-bottom: 20px;
             }
 
-            & > .topic-stats {
+            & > .topic-stats:first-child {
               .stat:only-child {
-                margin-right: 90px;
-                margin-top: -40px
+                margin-right: 100px;
+                margin-top: -35px;
               }
             }
 
